--- a/koala/static/sass/includes/_landingpage.scss
+++ b/koala/static/sass/includes/_landingpage.scss
@@ -284,10 +284,6 @@ $dropdown-border-color: $euca-green;
     }
 }
 
-.table-layout-fixed {
-    table-layout: fixed;
-}
-
 .sort-search {
     font-size: 0.9rem;
     form {
